<resources>
    <string name="app_name">Tent Finder</string>
    <string name="get_position">Get Position</string>
    <string name="type_name_hint">Type the tent name here</string>
    <string name="save_tent">Save Tent</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="add_new_tent">Add tent</string>
    <string name="navigate">Navigate</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="set_position">Set position</string>
    <string name="get_longitude">Get longitude</string>
    <string name="get_latitude">Get latitude</string>
    <string name="latitudeRowDesc">Latitude:</string>
    <string name="longitudeRowDesc">Longitude:</string>
    <string name="position_time">Position details received at </string>
    <string name="position_provider">Provider: </string>
    <string name="title_activity_map">Map</string>
    <string name="dataFromDatabaseInfo">Data received from database</string>
    <string name="dataFromDatabaseError">Error. Database isn\'t available</string>
    <string name="updateDatabase">Update database</string>
    <string name="exit">Exit</string>
    <string name="dataSaved">Data saved</string>
    <string name="dataNotSaved">Data not saved</string>
</resources>
